--- a/transporter/config.yaml
+++ b/transporter/config.yaml
@@ -1,8 +1,8 @@
 nodes:
-  mongo:
-    type: mongo
-    uri: mongodb://mongo1/harvester-test
-    namespace: harvester-test.entries
+  mongodb:
+    type: mongodb
+    uri: mongodb://mongo1/rental_apartments
+    namespace: rental_apartments.apartments
     debug: true
   es:
     type: elasticsearch
